cleared Perft testing